Fixed BUY SNEK button on mobile browsers

--- a/src/views/Home/components/SnekBtn.css
+++ b/src/views/Home/components/SnekBtn.css
@@ -1,4 +1,38 @@
 .buy-snek-btn {
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #960800;
+  border: 0;
+  border-radius: 16px;
+  box-shadow: inset 0px -1px 0px rgb(14 14 44 / 40%);
+  color: #FFFFFF;
+  cursor: pointer;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 600;
+  width: 100%;
+  height: 48px;
+  line-height: 1;
+  -webkit-letter-spacing: 0.03em;
+  -moz-letter-spacing: 0.03em;
+  -ms-letter-spacing: 0.03em;
+  letter-spacing: 0.03em;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  outline: 0;
+  padding: 0 24px;
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+  opacity: 1;
+  text-align: center;
 	width: 10%;
 	color: wheat !important;
 	margin-top: 1.5vh;
